test_manifests/infrastructure/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080
          - path: /api/address
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080
          - path: /api/product
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8081
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8081
          - path: /api/category
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8081
          - path: /api/admin/user
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080
          - path: /api/inventory
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8081
          - path: /api/brand
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8081
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 8082
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8083
          - path: /api/stripe
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8083
